update sevice: added logic, linter, github ci
