# api/oas_handlers_gen.go
@@ -21,8 +21,8 @@ import (
 
 // handleDevicesDeviceIDCommandsPostRequest handles POST /devices/{device_id}/commands operation.
 //
-// Отправляет команду устройству (например, «установить
-// температуру 22 градуса»).
+// Отправляет команду устройству (например "открыть
+// ворота").
 //
 // POST /devices/{device_id}/commands
 func (s *Server) handleDevicesDeviceIDCommandsPostRequest(args [1]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
@@ -93,7 +93,7 @@ func (s *Server) handleDevicesDeviceIDCommandsPostRequest(args [1]string, argsEs
 		}
 	}()
 
-	var response *DevicesDeviceIDCommandsPostOK
+	var response DevicesDeviceIDCommandsPostRes
 	if m := s.cfg.Middleware; m != nil {
 		mreq := middleware.Request{
 			Context:          ctx,
@@ -113,7 +113,7 @@ func (s *Server) handleDevicesDeviceIDCommandsPostRequest(args [1]string, argsEs
 		type (
 			Request  = *DevicesDeviceIDCommandsPostReq
 			Params   = DevicesDeviceIDCommandsPostParams
-			Response = *DevicesDeviceIDCommandsPostOK
+			Response = DevicesDeviceIDCommandsPostRes
 		)
 		response, err = middleware.HookMiddleware[
 			Request,
@@ -205,7 +205,7 @@ func (s *Server) handleDevicesDeviceIDGetRequest(args [1]string, argsEscaped boo
 		return
 	}
 
-	var response *DevicesDeviceIDGetOK
+	var response DevicesDeviceIDGetRes
 	if m := s.cfg.Middleware; m != nil {
 		mreq := middleware.Request{
 			Context:          ctx,
@@ -225,7 +225,7 @@ func (s *Server) handleDevicesDeviceIDGetRequest(args [1]string, argsEscaped boo
 		type (
 			Request  = struct{}
 			Params   = DevicesDeviceIDGetParams
-			Response = *DevicesDeviceIDGetOK
+			Response = DevicesDeviceIDGetRes
 		)
 		response, err = middleware.HookMiddleware[
 			Request,
@@ -332,7 +332,7 @@ func (s *Server) handleDevicesDeviceIDStatusPutRequest(args [1]string, argsEscap
 		}
 	}()
 
-	var response *DevicesDeviceIDStatusPutOK
+	var response DevicesDeviceIDStatusPutRes
 	if m := s.cfg.Middleware; m != nil {
 		mreq := middleware.Request{
 			Context:          ctx,
@@ -352,7 +352,7 @@ func (s *Server) handleDevicesDeviceIDStatusPutRequest(args [1]string, argsEscap
 		type (
 			Request  = *DevicesDeviceIDStatusPutReq
 			Params   = DevicesDeviceIDStatusPutParams
-			Response = *DevicesDeviceIDStatusPutOK
+			Response = DevicesDeviceIDStatusPutRes
 		)
 		response, err = middleware.HookMiddleware[
 			Request,
@@ -377,6 +377,117 @@ func (s *Server) handleDevicesDeviceIDStatusPutRequest(args [1]string, argsEscap
 	}
 
 	if err := encodeDevicesDeviceIDStatusPutResponse(response, w, span); err != nil {
+		defer recordError("EncodeResponse", err)
+		if !errors.Is(err, ht.ErrInternalServerErrorResponse) {
+			s.cfg.ErrorHandler(ctx, w, r, err)
+		}
+		return
+	}
+}
+
+// handleDevicesPostRequest handles POST /devices operation.
+//
+// Добавляет новое устройство.
+//
+// POST /devices
+func (s *Server) handleDevicesPostRequest(args [0]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
+	otelAttrs := []attribute.KeyValue{
+		semconv.HTTPRequestMethodKey.String("POST"),
+		semconv.HTTPRouteKey.String("/devices"),
+	}
+
+	// Start a span for this request.
+	ctx, span := s.cfg.Tracer.Start(r.Context(), "DevicesPost",
+		trace.WithAttributes(otelAttrs...),
+		serverSpanKind,
+	)
+	defer span.End()
+
+	// Add Labeler to context.
+	labeler := &Labeler{attrs: otelAttrs}
+	ctx = contextWithLabeler(ctx, labeler)
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		elapsedDuration := time.Since(startTime)
+		attrOpt := metric.WithAttributeSet(labeler.AttributeSet())
+
+		// Increment request counter.
+		s.requests.Add(ctx, 1, attrOpt)
+
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		s.duration.Record(ctx, float64(float64(elapsedDuration)/float64(time.Millisecond)), attrOpt)
+	}()
+
+	var (
+		recordError = func(stage string, err error) {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			s.errors.Add(ctx, 1, metric.WithAttributeSet(labeler.AttributeSet()))
+		}
+		err          error
+		opErrContext = ogenerrors.OperationContext{
+			Name: "DevicesPost",
+			ID:   "",
+		}
+	)
+	request, close, err := s.decodeDevicesPostRequest(r)
+	if err != nil {
+		err = &ogenerrors.DecodeRequestError{
+			OperationContext: opErrContext,
+			Err:              err,
+		}
+		defer recordError("DecodeRequest", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+	defer func() {
+		if err := close(); err != nil {
+			recordError("CloseRequest", err)
+		}
+	}()
+
+	var response DevicesPostRes
+	if m := s.cfg.Middleware; m != nil {
+		mreq := middleware.Request{
+			Context:          ctx,
+			OperationName:    "DevicesPost",
+			OperationSummary: "Добавление устройства",
+			OperationID:      "",
+			Body:             request,
+			Params:           middleware.Parameters{},
+			Raw:              r,
+		}
+
+		type (
+			Request  = *DevicesPostReq
+			Params   = struct{}
+			Response = DevicesPostRes
+		)
+		response, err = middleware.HookMiddleware[
+			Request,
+			Params,
+			Response,
+		](
+			m,
+			mreq,
+			nil,
+			func(ctx context.Context, request Request, params Params) (response Response, err error) {
+				response, err = s.h.DevicesPost(ctx, request)
+				return response, err
+			},
+		)
+	} else {
+		response, err = s.h.DevicesPost(ctx, request)
+	}
+	if err != nil {
+		defer recordError("Internal", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+
+	if err := encodeDevicesPostResponse(response, w, span); err != nil {
 		defer recordError("EncodeResponse", err)
 		if !errors.Is(err, ht.ErrInternalServerErrorResponse) {
 			s.cfg.ErrorHandler(ctx, w, r, err)
